ChangeLog for package tm.plugin.koRpus

changes in version 0.02-2 (2019-01-16)
unreleased:
  - this release is under development
fixed:
  - readCorpus(): can now also import data frames in TIF format, including
    support for hierarchal categories
  - readCorpus(): added missing imports from packages tm, NLP and parallel
  - readCorpus(): removed unused "level" argument
  - readCorpus(): fixed status message formatting
  - corpusTm(): removed useless "level" argument and corrected the output
  - corpusFiles(): now also works with flat hierarchy objects
added:
  - tif_as_corpus_df(): new S4 method to transform a kRp.hierarchy object
    into a TIF compliant data frame
changed:
  - readCorpus(): the tm corpora now include full hierarchy metadata

changes in version 0.02-1 (2018-07-29)
changed:
  - vignette: also includes info on readCorpus()
  - tests: adjusted test standards to new object class
added:
  - kRp.hierarchy: new S4 class to replace kRp.sourcesCorpus and
    kRp.topicCorpus to allow more generic nesting of hierarchical levels
  - readCorpus(): new function to generate kRp.hierarchy objects recursively
  - many corpus*() getter functions can now filter by hierarchy level or
    category ID
  - removed all code regarding simpleCorpus(), sourcesCorpus() and
    topicCorpus(), their object classes and methods; this is all handled much more
    flexible by kRp.hierarchy and readCorpus() now

changes in version 0.01-4 (2018-03-07)
fixed:
  - sourcesCorpus(): speak of "text" instead of "texts" if it's only one
changed:
  - adjusted package to support koRpus >= 0.11 and sylly, especially with
    regards to summary(), hyphen(), and new class contructors
  - summary(): for more coherence with the koRpus package the "text" column
    in the summary slot was renamed into "doc_id"
  - reaktanz.de supports HTTPS now, updated references
  - vignette is now in RMarkdown/HTML format; the SWeave/PDF version was
    dropped