@@ -93,6 +93,7 @@ importFrom(tm,DirSource)
 importFrom(tm,SimpleSource)
 importFrom(tm,VCorpus)
 importFrom(tm,VectorSource)
+importFrom(tm,readPlain)
 importFrom(utils,modifyList)
 importMethodsFrom(koRpus,lex.div)
 importMethodsFrom(koRpus,readability)
